--- a/index.html
+++ b/index.html
@@ -23,15 +23,11 @@
                 </label>
                 <article class="literal">
                     <div class="wrapper">
-                        <h3 class="title">những điều bé nhỏ</h3>
-                        <p class="content">Tôi goi những ngày này là ngày thành phố đắp chăn. Tấm chăn
-                            sương. Sáng ra đường lười mặc áo mưa, sương phủ liti trên áo,
-                            trên những sợi tóc mỏng; gặp lại cô bạn nhỏ, thấy sương đọng
-                            run run trên hàng mi cong. Và thế là một nỗi buồn nhẹ cứ lan
-                            ra...</p>
+                        <h3 class="title">thích vì tặng bút</h3>
+                        <p class="content">nga đã nói như vậy đấyyyyyyyyyyyyyyy</p>
                         <ul class="tags">
                             <li><a href="#">huy</a></li>
-                            <li><a href="#">hoa-cúc</a></li>
+                            <li><a href="#">bút</a></li>
                             <li><a href="#">sinh-nhật</a></li>
                         </ul>
                     </div>
@@ -47,16 +43,12 @@
                 </label>
                 <article class="literal">
                     <div class="wrapper">
-                        <h3 class="title">những điều bé nhỏ</h3>
-                        <p class="content">Tôi goi những ngày này là ngày thành phố đắp chăn. Tấm chăn
-                            sương. Sáng ra đường lười mặc áo mưa, sương phủ liti trên áo,
-                            trên những sợi tóc mỏng; gặp lại cô bạn nhỏ, thấy sương đọng
-                            run run trên hàng mi cong. Và thế là một nỗi buồn nhẹ cứ lan
-                            ra...</p>
+                        <h3 class="title"><strong>huy</strong> chọn vì nó đen trắng</h3>
+                        <p class="content">đã chọn nhiều bức màu. hãy chọn một bức đen trắng để thử xem sao</p>
                         <ul class="tags">
-                            <li><a href="#">huy</a></li>
-                            <li><a href="#">hoa-cúc</a></li>
-                            <li><a href="#">sinh-nhật</a></li>
+                            <li><a href="#">thử</a></li>
+                            <li><a href="#">đen-trắng</a></li>
+                            <li><a href="#">dài</a></li>
                         </ul>
                     </div>
                 </article>
@@ -72,15 +64,10 @@
                 <article class="literal">
                     <div class="wrapper">
                         <h3 class="title">những điều bé nhỏ</h3>
-                        <p class="content">Tôi goi những ngày này là ngày thành phố đắp chăn. Tấm chăn
-                            sương. Sáng ra đường lười mặc áo mưa, sương phủ liti trên áo,
-                            trên những sợi tóc mỏng; gặp lại cô bạn nhỏ, thấy sương đọng
-                            run run trên hàng mi cong. Và thế là một nỗi buồn nhẹ cứ lan
-                            ra...</p>
+                        <p class="content">hay thật đấy. nhớ thật đấy. những nơi gần huy. nhưng không tới. cho đến khi...</p>
                         <ul class="tags">
                             <li><a href="#">huy</a></li>
-                            <li><a href="#">hoa-cúc</a></li>
-                            <li><a href="#">sinh-nhật</a></li>
+                            <li><a href="#">nơi-nơi</a></li>
                         </ul>
                     </div>
                 </article>
@@ -95,16 +82,12 @@
                 </label>
                 <article class="literal">
                     <div class="wrapper">
-                        <h3 class="title">những điều bé nhỏ</h3>
-                        <p class="content">Tôi goi những ngày này là ngày thành phố đắp chăn. Tấm chăn
-                            sương. Sáng ra đường lười mặc áo mưa, sương phủ liti trên áo,
-                            trên những sợi tóc mỏng; gặp lại cô bạn nhỏ, thấy sương đọng
-                            run run trên hàng mi cong. Và thế là một nỗi buồn nhẹ cứ lan
-                            ra...</p>
+                        <h3 class="title">vàng vàng</h3>
+                        <p class="content">là mặt trời trên ngaoooooooooooooo</p>
                         <ul class="tags">
-                            <li><a href="#">huy</a></li>
-                            <li><a href="#">hoa-cúc</a></li>
-                            <li><a href="#">sinh-nhật</a></li>
+                            <li><a href="#">ngao</a></li>
+                            <li><a href="#">ngáo</a></li>
+                            <li><a href="#">ngạo</a></li>
                         </ul>
                     </div>
                 </article>
@@ -119,16 +102,12 @@
                 </label>
                 <article class="literal">
                     <div class="wrapper">
-                        <h3 class="title">những điều bé nhỏ</h3>
-                        <p class="content">Tôi goi những ngày này là ngày thành phố đắp chăn. Tấm chăn
-                            sương. Sáng ra đường lười mặc áo mưa, sương phủ liti trên áo,
-                            trên những sợi tóc mỏng; gặp lại cô bạn nhỏ, thấy sương đọng
-                            run run trên hàng mi cong. Và thế là một nỗi buồn nhẹ cứ lan
-                            ra...</p>
+                        <h3 class="title">"ôi tớ thích chỗ này!"</h3>
+                        <p class="content"></p>
                         <ul class="tags">
-                            <li><a href="#">huy</a></li>
-                            <li><a href="#">hoa-cúc</a></li>
-                            <li><a href="#">sinh-nhật</a></li>
+                            <li><a href="#">thích</a></li>
+                            <li><a href="#">lại-thích</a></li>
+                            <li><a href="#">thích-nữa</a></li>
                         </ul>
                     </div>
                 </article>
@@ -144,15 +123,11 @@
                 <article class="literal">
                     <div class="wrapper">
                         <h3 class="title">những điều bé nhỏ</h3>
-                        <p class="content">Tôi goi những ngày này là ngày thành phố đắp chăn. Tấm chăn
-                            sương. Sáng ra đường lười mặc áo mưa, sương phủ liti trên áo,
-                            trên những sợi tóc mỏng; gặp lại cô bạn nhỏ, thấy sương đọng
-                            run run trên hàng mi cong. Và thế là một nỗi buồn nhẹ cứ lan
-                            ra...</p>
+                        <p class="content">"nhưng chỉ có 4 ngón". khóc</p>
                         <ul class="tags">
                             <li><a href="#">huy</a></li>
-                            <li><a href="#">hoa-cúc</a></li>
-                            <li><a href="#">sinh-nhật</a></li>
+                            <li><a href="#">hoa</a></li>
+                            <li><a href="#">tay-huy</a></li>
                         </ul>
                     </div>
                 </article>
