--- a/index.html
+++ b/index.html
@@ -15,6 +15,44 @@
             <div class="logo"></div>
         </header>
 
+
+        <input id="20160125-0158-hoa-mat-troi" class="pseudo-toggle-button hidden" type="checkbox" />
+        <section class="hanh-tinh planet">
+            <div class="wrapper">
+                <label for="20160125-0158-hoa-mat-troi" class="decorate">
+                    <img src="asset/image/20160125-0158-hoa-mat-troi.jpg" alt="pen" />
+                </label>
+                <article class="literal">
+                    <div class="wrapper">
+                        <h3 class="title">đừng lang thang một mình nữa nhé</h3>
+                        <p class="content">nga!</p>
+                        <ul class="tags">
+                            <li><a href="#">nơi-nơi</a></li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <input id="20160125-0158-leo-hoa" class="pseudo-toggle-button hidden" type="checkbox" checked />
+        <section class="hanh-tinh planet">
+            <div class="wrapper">
+                <label for="20160125-0158-leo-hoa" class="decorate">
+                    <img src="asset/image/20160125-0158-leo-hoa.jpg" alt="pen" />
+                </label>
+                <article class="literal">
+                    <div class="wrapper">
+                        <h3 class="title">khìz</h3>
+                        <p class="content">leo leo leo!</p>
+                        <ul class="tags">
+                            <li><a href="#">khầy-hầy</a></li>
+                            <li><a href="#">nơi-nơi</a></li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+        </section>
+
         <input id="2016-01-24-p-1" class="pseudo-toggle-button hidden" type="checkbox" checked />
         <section class="hanh-tinh planet">
             <div class="wrapper">
