--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Nga là con mèo</title>
     <link type="text/css" rel="stylesheet" href="css/basic.css?v=2" />
     <link type="text/css" rel="stylesheet" href="css/module.css?v=2" />
