--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Nga là con mèo</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css' />
     <link type="text/css" rel="stylesheet" href="css/basic.css?v=2" />
     <link type="text/css" rel="stylesheet" href="css/module.css?v=2" />
     <link type="text/css" rel="stylesheet" href="css/state.css?v=2" />
