--- a/index.html
+++ b/index.html
@@ -1,178 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nga là con mèo</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css' />
-    <link type="text/css" rel="stylesheet" href="css/basic.css?v=2" />
-    <link type="text/css" rel="stylesheet" href="css/module.css?v=2" />
-    <link type="text/css" rel="stylesheet" href="css/state.css?v=2" />
-    <link type="text/css" rel="stylesheet" href="css/style.css?v=2" />
-    <link type="text/css" rel="stylesheet" href="css/fluid.css?v=2" />
-</head>
-<body>
-    <div class="container">
-        <header class="header">
-            <div class="logo"></div>
-        </header>
+---
+layout: one-column
+go-title: Những điều bé nhỏ của Ngaooooo!
+---
 
-
-        <input id="20160125-0158-hoa-mat-troi" class="pseudo-toggle-button hidden" type="checkbox" />
-        <section class="hanh-tinh planet">
-            <div class="wrapper">
-                <label for="20160125-0158-hoa-mat-troi" class="decorate">
-                    <img src="asset/image/20160125-0158-hoa-mat-troi.jpg" alt="pen" />
-                </label>
-                <article class="literal">
-                    <div class="wrapper">
-                        <h3 class="title">đừng lang thang một mình nữa nhé</h3>
-                        <p class="content">nga!</p>
-                        <ul class="tags">
-                            <li><a href="#">nơi-nơi</a></li>
-                        </ul>
-                    </div>
-                </article>
-            </div>
-        </section>
-
-        <input id="20160125-0158-leo-hoa" class="pseudo-toggle-button hidden" type="checkbox" checked />
-        <section class="hanh-tinh planet">
-            <div class="wrapper">
-                <label for="20160125-0158-leo-hoa" class="decorate">
-                    <img src="asset/image/20160125-0158-leo-hoa.jpg" alt="pen" />
-                </label>
-                <article class="literal">
-                    <div class="wrapper">
-                        <h3 class="title">khìz</h3>
-                        <p class="content">leo leo leo!</p>
-                        <ul class="tags">
-                            <li><a href="#">khầy-hầy</a></li>
-                            <li><a href="#">nơi-nơi</a></li>
-                        </ul>
-                    </div>
-                </article>
-            </div>
-        </section>
-
-        <input id="2016-01-24-p-1" class="pseudo-toggle-button hidden" type="checkbox" checked />
-        <section class="hanh-tinh planet">
-            <div class="wrapper">
-                <label for="2016-01-24-p-1" class="decorate">
-                    <img src="asset/image/p-1.jpg" alt="pen" />
-                </label>
-                <article class="literal">
-                    <div class="wrapper">
-                        <h3 class="title">thích vì tặng bút</h3>
-                        <p class="content">nga đã nói như vậy đấyyyyyyyyyyyyyyy</p>
-                        <ul class="tags">
-                            <li><a href="#">huy</a></li>
-                            <li><a href="#">bút</a></li>
-                            <li><a href="#">sinh-nhật</a></li>
-                        </ul>
-                    </div>
-                </article>
-            </div>
-        </section>
-
-        <input id="2016-01-24-p-6" class="pseudo-toggle-button hidden" type="checkbox" />
-        <section class="hanh-tinh planet">
-            <div class="wrapper">
-                <label for="2016-01-24-p-6" class="decorate">
-                    <img src="asset/image/p-6.jpg" alt="pen" />
-                </label>
-                <article class="literal">
-                    <div class="wrapper">
-                        <h3 class="title"><strong>huy</strong> chọn vì nó đen trắng</h3>
-                        <p class="content">đã chọn nhiều bức màu. hãy chọn một bức đen trắng để thử xem sao</p>
-                        <ul class="tags">
-                            <li><a href="#">thử</a></li>
-                            <li><a href="#">đen-trắng</a></li>
-                            <li><a href="#">dài</a></li>
-                        </ul>
-                    </div>
-                </article>
-            </div>
-        </section>
-
-        <input id="2016-01-24-p-4" class="pseudo-toggle-button hidden" type="checkbox" checked />
-        <section class="hanh-tinh planet">
-            <div class="wrapper">
-                <label for="2016-01-24-p-4" class="decorate">
-                    <img src="asset/image/p-4.jpg" alt="pen" />
-                </label>
-                <article class="literal">
-                    <div class="wrapper">
-                        <h3 class="title">những điều bé nhỏ</h3>
-                        <p class="content">hay thật đấy. nhớ thật đấy. những nơi gần huy. nhưng không tới. cho đến khi...</p>
-                        <ul class="tags">
-                            <li><a href="#">huy</a></li>
-                            <li><a href="#">nơi-nơi</a></li>
-                        </ul>
-                    </div>
-                </article>
-            </div>
-        </section>
-
-        <input id="2016-01-24-p-3" class="pseudo-toggle-button hidden" type="checkbox" checked />
-        <section class="hanh-tinh planet">
-            <div class="wrapper">
-                <label for="2016-01-24-p-3" class="decorate">
-                    <img src="asset/image/p-3.jpg" alt="pen" />
-                </label>
-                <article class="literal">
-                    <div class="wrapper">
-                        <h3 class="title">vàng vàng</h3>
-                        <p class="content">là mặt trời trên ngaoooooooooooooo</p>
-                        <ul class="tags">
-                            <li><a href="#">ngao</a></li>
-                            <li><a href="#">ngáo</a></li>
-                            <li><a href="#">ngạo</a></li>
-                        </ul>
-                    </div>
-                </article>
-            </div>
-        </section>
-
-        <input id="2016-01-24-p-5" class="pseudo-toggle-button hidden" type="checkbox" />
-        <section class="hanh-tinh planet">
-            <div class="wrapper">
-                <label for="2016-01-24-p-5" class="decorate">
-                    <img src="asset/image/p-5.jpg" alt="pen" />
-                </label>
-                <article class="literal">
-                    <div class="wrapper">
-                        <h3 class="title">"ôi tớ thích chỗ này!"</h3>
-                        <p class="content"></p>
-                        <ul class="tags">
-                            <li><a href="#">thích</a></li>
-                            <li><a href="#">lại-thích</a></li>
-                            <li><a href="#">thích-nữa</a></li>
-                        </ul>
-                    </div>
-                </article>
-            </div>
-        </section>
-
-        <input id="2016-01-24-p-2" class="pseudo-toggle-button hidden" type="checkbox" checked />
-        <section class="hanh-tinh planet">
-            <div class="wrapper">
-                <label for="2016-01-24-p-2" class="decorate">
-                    <img src="asset/image/p-2.jpg" alt="pen" />
-                </label>
-                <article class="literal">
-                    <div class="wrapper">
-                        <h3 class="title">những điều bé nhỏ</h3>
-                        <p class="content">"nhưng chỉ có 4 ngón". khóc</p>
-                        <ul class="tags">
-                            <li><a href="#">huy</a></li>
-                            <li><a href="#">hoa</a></li>
-                            <li><a href="#">tay-huy</a></li>
-                        </ul>
-                    </div>
-                </article>
-            </div>
-        </section>
-    </div>
-</body>
-</html>
+{% for post in site.posts | sort_by: "date" %}
+  <input id="{{ post.year }}-{{ post.month }}-{{ post.day }}-{{ post.hour }}-{{ post.minute }}-{{ post.second }}-{{ post.id }}" class="pseudo-toggle-button hidden" type="checkbox" {% if post.show %}{{ "checked" }}{% endif %} />
+  <section class="hanh-tinh planet">
+      <div class="wrapper">
+          <label for="{{ post.year }}-{{ post.month }}-{{ post.day }}-{{ post.hour }}-{{ post.minute }}-{{ post.second }}-{{ post.id }}" class="decorate">
+              <img src="/asset/image/{{ post.imgUrl }}" alt="{{ post.imgAlt}}" />
+          </label>
+          <article class="literal">
+              <div class="wrapper">
+                  <h3 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h3>
+                  <p class="content">{{ post.content }}</p>
+                  <ul class="tags">
+                  {% for tag in post.tags %}
+                    <li><a href="#">{{ tag }}</a></li>
+                  {% endfor %}
+                  </ul>
+              </div>
+          </article>
+      </div>
+  </section>
+{% endfor %}
