refactor post structure

--- a/_posts/2016-01-24-hoa-tay.html
+++ b/_posts/2016-01-24-hoa-tay.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "những điều bé nhỏ"
-content: "&quot;những chỉ có 4 ngón&quot;. khóc"
+shortPreview: "&quot;những chỉ có 4 ngón&quot;. khóc"
 id: "hoa-tay"
 show: true
 imgUrl: "p-2.jpg"
