--- a/_posts/2016-01-24-huy-chon-vi-no-den-trang.html
+++ b/_posts/2016-01-24-huy-chon-vi-no-den-trang.html
@@ -2,7 +2,7 @@
 layout: post
 title: "huy chọn vì nó đen trắng"
 og-title: "huy chọn vì nó đen trắng"
-content: "đã chọn nhiều bức màu. hãy chọn một bức đen trắng để thử xem sao"
+shortPreview: "đã chọn nhiều bức màu. hãy chọn một bức đen trắng để thử xem sao"
 id: "huy-chon-no-vi-den-trang"
 imgUrl: "p-6.jpg"
 imgAlt: "huy chọn vì nó đen trắng"
