--- a/_posts/2016-01-24-oi-to-thich-cho-nay.html
+++ b/_posts/2016-01-24-oi-to-thich-cho-nay.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "&quot;ôi tớ thích chỗ này!&quot;"
-content: ""
+shortPreview: ""
 id: "oi-to-thich-cho-nay"
 imgUrl: "p-5.jpg"
 imgAlt: "ôi tớ thích chỗ này"
