--- a/_posts/2016-01-24-thich-vi-tang-but.html
+++ b/_posts/2016-01-24-thich-vi-tang-but.html
@@ -2,7 +2,7 @@
 layout: post
 title: "thích vì tặng bút"
 og-title: "thích vì tặng bút"
-content: "ngaaaaa đã nói như vậy đấy"
+shortPreview: "ngaaaaa đã nói như vậy đấy"
 show: true
 id: "thich-vi-tang-but"
 imgUrl: "p-1.jpg"
