--- a/_posts/2016-01-24-vang-vang.html
+++ b/_posts/2016-01-24-vang-vang.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "vàng vàng"
-content: "là mặt trời trên ngaooooo!"
+shortPreview: "là mặt trời trên ngaooooo!"
 show: true
 id: "vang-vang"
 imgUrl: "p-3.jpg"
