--- a/_posts/2016-01-25-dung-lang-thang-mot-minh.html
+++ b/_posts/2016-01-25-dung-lang-thang-mot-minh.html
@@ -2,7 +2,7 @@
 layout: post
 title: "đừng lang thang một mình nữa nhé"
 og-title: "đừng lang thang một mình nữa nhé"
-content: "nga!"
+shortPreview: "nga!"
 id: "dung-lang-thang-mot-minh"
 imgUrl: "20160125-0158-hoa-mat-troi.jpg"
 imgAlt: "leo-leo-leo"
