--- a/_posts/2016-01-25-hoa-mat-troi.html
+++ b/_posts/2016-01-25-hoa-mat-troi.html
@@ -2,7 +2,7 @@
 layout: post
 title: "khìz"
 og-title: "khìz"
-content: "leo leo leo!"
+shortPreview: "leo leo leo!"
 show: true
 id: "khiz"
 imgUrl: "20160125-0158-leo-hoa.jpg"
