--- a/_posts/2016-01-25-nga-buon-ngu.html
+++ b/_posts/2016-01-25-nga-buon-ngu.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "20161003"
-content: "một ngày màu xanh. nụ hôn màu xanh."
+shortPreview: "một ngày màu xanh. nụ hôn màu xanh."
 id: "mot-ngay-mau-xanh"
 imgUrl: "20160126-0044-ngabuonngu.JPG"
 imgAlt: "nga buon ngu"
