--- a/_posts/2016-01-24-nhung-dieu-be-nho-huy-dong-lua.html
+++ b/_posts/2016-01-24-nhung-dieu-be-nho-huy-dong-lua.html
@@ -2,7 +2,7 @@
 layout: post
 title: "những điều bé nhỏ"
 og-title: "những điều bé nhỏ"
-content: "hay thật đấy. nhớ thật đấy. những nơi gần huy. nhưng không tới. cho đến khi..."
+shortPreview: "hay thật đấy. nhớ thật đấy. những nơi gần huy. nhưng không tới. cho đến khi..."
 show: true
 id: "huy-dong-lua"
 imgUrl: "p-4.jpg"
