--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ go-title: Những điều bé nhỏ của Ngaooooo!
           <article class="literal">
               <div class="wrapper">
                   <h3 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h3>
-                  <p class="content">{{ post.content }}</p>
+                  <p class="content">{{ post.shortPreview }}</p>
                   <ul class="tags">
                   {% for tag in post.tags %}
                     <li><a href="#">{{ tag }}</a></li>
