reduce image size on home list, add create page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: one-column
-go-title: Những điều bé nhỏ của Ngaooooo!
+og-title: Những điều bé nhỏ của Ngaooooo!
 ---
 
 {% for post in site.posts | sort_by: "date" %}
