--- a/_posts/2016-01-24-huy-chon-vi-no-den-trang.html
+++ b/_posts/2016-01-24-huy-chon-vi-no-den-trang.html
@@ -4,7 +4,7 @@ title: "huy chọn vì nó đen trắng"
 og-title: "huy chọn vì nó đen trắng"
 shortPreview: "đã chọn nhiều bức màu. hãy chọn một bức đen trắng để thử xem sao"
 id: "huy-chon-no-vi-den-trang"
-imgUrl: "p-6.jpg"
+imgUrl: "/asset/image/p-6.jpg"
 imgAlt: "huy chọn vì nó đen trắng"
 date: 2016-01-24 22:06:01
 year: 2016
