--- a/_posts/2016-01-24-nhung-dieu-be-nho-huy-dong-lua.html
+++ b/_posts/2016-01-24-nhung-dieu-be-nho-huy-dong-lua.html
@@ -5,7 +5,7 @@ og-title: "những điều bé nhỏ"
 shortPreview: "hay thật đấy. nhớ thật đấy. những nơi gần huy. nhưng không tới. cho đến khi..."
 show: false
 id: "huy-dong-lua"
-imgUrl: "p-4.jpg"
+imgUrl: "/asset/image/p-4.jpg"
 imgAlt: "huy chọn vì nó đen trắng"
 date: 2016-01-24 20:06:01
 year: 2016
