--- a/_posts/2016-01-24-oi-to-thich-cho-nay.html
+++ b/_posts/2016-01-24-oi-to-thich-cho-nay.html
@@ -3,7 +3,7 @@ layout: post
 title: "&quot;ôi tớ thích chỗ này!&quot;"
 shortPreview: ""
 id: "oi-to-thich-cho-nay"
-imgUrl: "p-5.jpg"
+imgUrl: "/asset/image/p-5.jpg"
 imgAlt: "ôi tớ thích chỗ này"
 date: 2016-01-24 18:06:01
 year: 2016
