--- a/_posts/2016-01-24-thich-vi-tang-but.html
+++ b/_posts/2016-01-24-thich-vi-tang-but.html
@@ -5,7 +5,7 @@ og-title: "thích vì tặng bút"
 shortPreview: "ngaaaaa đã nói như vậy đấy"
 show: false
 id: "thich-vi-tang-but"
-imgUrl: "p-1.jpg"
+imgUrl: "/asset/image/p-1.jpg"
 imgAlt: "thích vì tặng bút"
 date: 2016-01-24 23:06:01
 year: 2016
