--- a/_posts/2016-01-24-vang-vang.html
+++ b/_posts/2016-01-24-vang-vang.html
@@ -4,7 +4,7 @@ title: "vàng vàng"
 shortPreview: "là mặt trời trên ngaooooo!"
 show: false
 id: "vang-vang"
-imgUrl: "p-3.jpg"
+imgUrl: "/asset/image/p-3.jpg"
 imgAlt: "vàng vàng"
 date: 2016-01-24 19:06:01
 year: 2016
