--- a/_posts/2016-01-25-dung-lang-thang-mot-minh.html
+++ b/_posts/2016-01-25-dung-lang-thang-mot-minh.html
@@ -4,7 +4,7 @@ title: "đừng lang thang một mình nữa nhé"
 og-title: "đừng lang thang một mình nữa nhé"
 shortPreview: "nga!"
 id: "dung-lang-thang-mot-minh"
-imgUrl: "20160125-0158-hoa-mat-troi.jpg"
+imgUrl: "/asset/image/20160125-0158-hoa-mat-troi.jpg"
 imgAlt: "leo-leo-leo"
 date: 2016-01-25 12:06:01
 year: 2016
