--- a/_posts/2016-01-25-hoa-mat-troi.html
+++ b/_posts/2016-01-25-hoa-mat-troi.html
@@ -5,7 +5,7 @@ og-title: "khìz"
 shortPreview: "leo leo leo!"
 show: false
 id: "khiz"
-imgUrl: "20160125-0158-leo-hoa.jpg"
+imgUrl: "/asset/image/20160125-0158-leo-hoa.jpg"
 imgAlt: "leo-leo-leo"
 date: 2016-01-25 11:06:01
 year: 2016
