--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ og-title: Những điều bé nhỏ của Ngaooooo!
   <section class="hanh-tinh planet">
       <div class="wrapper">
           <label for="{{ post.year }}-{{ post.month }}-{{ post.day }}-{{ post.hour }}-{{ post.minute }}-{{ post.second }}-{{ post.id }}" class="decorate">
-              <img src="/asset/image/{{ post.imgUrl }}" alt="{{ post.imgAlt}}" />
+              <img src="{{ post.imgUrl }}" alt="{{ post.imgAlt}}" />
           </label>
           <article class="literal">
               <div class="wrapper">
