--- a/_posts/2016-01-24-hoa-tay.html
+++ b/_posts/2016-01-24-hoa-tay.html
@@ -4,7 +4,7 @@ title: "những điều bé nhỏ"
 shortPreview: "&quot;những chỉ có 4 ngón&quot;. khóc"
 id: "hoa-tay"
 show: false
-imgUrl: "p-2.jpg"
+imgUrl: "/asset/image/p-2.jpg"
 imgAlt: "hoa tay"
 date: 2016-01-24 17:06:01
 year: 2016
