--- a/_posts/2016-01-25-nga-buon-ngu.html
+++ b/_posts/2016-01-25-nga-buon-ngu.html
@@ -3,7 +3,7 @@ layout: post
 title: "20161003"
 shortPreview: "một ngày màu xanh. nụ hôn màu xanh."
 id: "mot-ngay-mau-xanh"
-imgUrl: "20160126-0044-ngabuonngu.JPG"
+imgUrl: "/asset/image/20160126-0044-ngabuonngu.JPG"
 imgAlt: "nga buon ngu"
 date: 2016-01-25 00:55:00
 year: 2016
