--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: one-column
-og-title: Những điều bé nhỏ của Ngaooooo!
+og-title: Xin đừng hút!
 ---
 
 {% for post in site.posts | sort_by: "date" %}
