fix a bug of linux

--- a/_posts/2016-01-25-hut-thuoc-la-co-the-gay-ung-thu-moi.html
+++ b/_posts/2016-01-25-hut-thuoc-la-co-the-gay-ung-thu-moi.html
@@ -3,7 +3,7 @@ layout: post
 title: "Hút thuốc lá có thể gây ung thư môi"
 shortPreview: "Thuốc lá là một trong những yếu tố dẫn đến ung thư môi"
 id: "hut-thuoc-la-co-the-gay-ung-thu-moi"
-imgUrl: "/asset/image/tac-hai-3.JPG"
+imgUrl: "/asset/image/tac-hai-3.jpg"
 imgAlt: "Ung thư môi"
 date: 2016-01-25 00:55:00
 year: 2016
