--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: one-column
-og-title: Xin đừng hút!
+og-title: Nga là con mèo cơ mà lị!
 ---
 
 {% for post in site.posts | sort_by: "date" %}
