--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ og-title: Nga là con mèo cơ mà lị!
   <section class="hanh-tinh planet">
       <div class="wrapper">
           <label for="{{ post.year }}-{{ post.month }}-{{ post.day }}-{{ post.hour }}-{{ post.minute }}-{{ post.second }}-{{ post.id }}" class="decorate">
-              <img src="{{ post.imgUrl }}" alt="{{ post.imgAlt}}" />
+              <img src="/nhung-dieu-be-nho/{{ post.imgUrl }}" alt="{{ post.imgAlt}}" />
           </label>
           <article class="literal">
               <div class="wrapper">
-                  <h3 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h3>
+                  <h3 class="title"><a href="/nhung-dieu-be-nho/{{ post.url }}">{{ post.title }}</a></h3>
                   <p class="content">{{ post.shortPreview }}</p>
                   <ul class="tags">
                   {% for tag in post.tags %}
